--- a/styles/style.css
+++ b/styles/style.css
@@ -1772,10 +1772,11 @@ nav ul li {
     background: #edf2ec;
     position: relative;
     display: grid;
-    padding-top: 26px;
-    padding-bottom: 24px;
     grid-template-columns: 1fr;
-    padding-left: 25px;
+    padding: 26px 25px 24px 25px;
+    margin: 0 auto;
+    text-align: center;
+    grid-column-gap: 0;
 }
 
 #welcome .container h1 {
@@ -1792,6 +1793,15 @@ text-align: center;
     margin: 20px auto 0;
     padding-left: 1px;
     text-align: center;
+}
+
+.welcome__section2 {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    margin: 0 auto;
+    
 }
 
 
